# IADCS

./: .gitignore  CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  app.qrc  main.cpp
labs/lab1/: Lab1Widget.cpp  Lab1Widget.h
labs/lab2/: Lab2Widget.cpp  Lab2Widget.h
labs/lab3/: Lab3Widget.cpp  Lab3Widget.h
labs/lab4/: Lab4Widget.cpp  Lab4Widget.h
labs/lab5/: Lab5Widget.cpp  Lab5Widget.h
labs/lab6/: Lab6Widget.cpp  Lab6Widget.h
